// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Primitive does render 1`] = `
<div
  className="row"
>
  <div
    className="col-md-6"
  >
    <div
      className="rka-form-group"
    >
      <label
        className="rka-label"
      >
        Count
      </label>
      <div
        className="rka-input-range-container clearfix"
      >
        <input
          className="rka-input-range"
          disabled={true}
          max={200}
          min={0}
          name="count"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder={undefined}
          type="range"
          value={20}
        />
        <p>
          <span
            className="rka-input-range-min"
          >
            0
          </span>
          <span
            className="rka-input-range-current txt-bold is-disabled"
          >
            20
          </span>
          <span
            className="rka-input-range-max"
          >
            200
          </span>
        </p>
      </div>
    </div>
  </div>
  <div
    className="col-md-6"
  >
    <div
      className="rka-form-group"
    >
      <label
        className="rka-label"
      >
        Mode
      </label>
      <div
        className="rka-input-range-container clearfix"
      >
        <input
          className="rka-input-range"
          disabled={true}
          max={9}
          min={0}
          name="mode"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder={undefined}
          type="range"
          value={undefined}
        />
        <p>
          <span
            className="rka-input-range-min"
          >
            0
          </span>
          <span
            className="rka-input-range-current txt-bold is-disabled"
          >
            0
          </span>
          <span
            className="rka-input-range-max"
          >
            9
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Primitive does render with threshold values 1`] = `
<div
  className="row"
>
  <div
    className="col-md-6"
  >
    <div
      className="rka-form-group"
    >
      <label
        className="rka-label"
      >
        Count
      </label>
      <div
        className="rka-input-range-container clearfix"
      >
        <input
          className="rka-input-range"
          disabled={true}
          max={200}
          min={0}
          name="count"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder={undefined}
          type="range"
          value={30}
        />
        <p>
          <span
            className="rka-input-range-min"
          >
            0
          </span>
          <span
            className="rka-input-range-current txt-bold is-disabled"
          >
            30
          </span>
          <span
            className="rka-input-range-max"
          >
            200
          </span>
        </p>
      </div>
    </div>
  </div>
  <div
    className="col-md-6"
  >
    <div
      className="rka-form-group"
    >
      <label
        className="rka-label"
      >
        Mode
      </label>
      <div
        className="rka-input-range-container clearfix"
      >
        <input
          className="rka-input-range"
          disabled={true}
          max={9}
          min={0}
          name="mode"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder={undefined}
          type="range"
          value={5}
        />
        <p>
          <span
            className="rka-input-range-min"
          >
            0
          </span>
          <span
            className="rka-input-range-current txt-bold is-disabled"
          >
            5
          </span>
          <span
            className="rka-input-range-max"
          >
            9
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;
